Some updates for markdown and updates on classes Loops and Lists

--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores (Respostas).ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores (Respostas).ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Respostas dos exercícios</h3>"
+    "### Respostas dos exercícios"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que mostre a mensagem \"Alo mundo\" na tela.</p>"
+    "Faça um programa que mostre a mensagem \"Alo mundo\" na tela."
    ]
   },
   {
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça as 4 notas bimestrais e mostre a média.</p>"
+    "Faça um programa que peça as 4 notas bimestrais e mostre a média."
    ]
   },
   {
@@ -59,7 +59,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça o raio de um círculo, calcule e mostre sua área. (pi = 3.14)</p>"
+    "Faça um programa que peça o raio de um círculo, calcule e mostre sua área. (pi = 3.14)"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês.</p>"
+    "Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês."
    ]
   },
   {
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça a temperatura em graus Farenheit, transforme e mostre a temperatura em graus Celsius. C = (5 * (F-32) / 9).</p>"
+    "Faça um programa que peça a temperatura em graus Farenheit, transforme e mostre a temperatura em graus Celsius. C = (5 * (F-32) / 9)."
    ]
   },
   {
@@ -131,12 +131,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça 2 números inteiros e um número real. Calcule e mostre:</p>\n",
-    "<ol>\n",
-    "    <li>o produto do dobro do primeiro com metade do segundo.</li>\n",
-    "    <li>a soma do triplo do primeiro com o terceiro.</li>\n",
-    "    <li>o terceiro elevado ao cubo.</li>\n",
-    "</ol>"
+    "Faça um programa que peça 2 números inteiros e um número real. Calcule e mostre:\n",
+    "* o produto do dobro do primeiro com metade do segundo.\n",
+    "* a soma do triplo do primeiro com o terceiro.\n",
+    "* o terceiro elevado ao cubo."
    ]
   },
   {
@@ -168,13 +166,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:</p>\n",
-    "<ol>\n",
-    "    <li>salário bruto.</li>\n",
-    "    <li>quanto pagou ao INSS.</li>\n",
-    "    <li>quanto pagou ao sindicato.</li>\n",
-    "    <li>o salário líquido.</li>\n",
-    "<ol>\n",
+    "Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
+    "* salário bruto.\n",
+    "* quanto pagou ao INSS.\n",
+    "* quanto pagou ao sindicato.\n",
+    "* o salário líquido.\n",
+    "\n",
     "Obs.: Salário Bruto - Descontos = Salário Líquido."
    ]
   },
@@ -228,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os dados do programa com as mensagens adequadas.</p>"
+    "João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os dados do programa com as mensagens adequadas."
    ]
   },
   {
@@ -280,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
