--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Entrada e saída de dados</h2>"
+    "## Entrada e saída de dados"
    ]
   },
   {
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Tipos de dados</h2>"
+    "## Tipos de dados"
    ]
   },
   {
@@ -116,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Variáveis</h2>"
+    "## Variáveis"
    ]
   },
   {
@@ -260,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Operadores numéricos</h2>"
+    "## Operadores numéricos"
    ]
   },
   {
@@ -399,7 +399,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Operadores booleanos/lógicos</h2>"
+    "## Operadores booleanos/lógicos"
    ]
   },
   {
@@ -463,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Comparadores numéricos</h2>"
+    "## Comparadores numéricos"
    ]
   },
   {
@@ -578,8 +578,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Conversão de tipos</h2>\n",
-    "<p>Para converter de um tipo para outro podemos fazer algo assim:</p>\n",
+    "## Conversão de tipos\n",
+    "Para converter de um tipo para outro podemos fazer algo assim:\n",
     "`tipo_a_ser_convertido( informação )`"
    ]
   },
@@ -724,13 +724,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Exercícios</h2>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Exercícios\n",
+    "\n",
     "<ol>\n",
     "    <li>Faça um programa que mostre a mensagem \"Alo mundo\" na tela.</li>\n",
     "    <li>Faça um programa que peça as 4 notas bimestrais e mostre a média.</li>\n",
@@ -767,9 +762,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Referências</h2>\n",
+    "## Referências\n",
     "\n",
-    "#### https://github.com/dsacademybr/PythonFundamentos"
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-01-Numeros.ipynb\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-02-Variaveis.ipynb"
    ]
   },
   {
