--- a/Aulas/4 - Listas.ipynb
+++ b/Aulas/4 - Listas.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Listas</h2>"
+    "## Listas"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +84,7 @@
        "['Maria', 'Oliveira']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,6 +92,30 @@
    "source": [
     "# Separar as palavras em um string por espaço\n",
     "nome = 'Maria Oliveira'\n",
+    "nome.split(' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Maria', 'Oliveira']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Separar as palavras em um string por espaço\n",
+    "nome = 'Maria Oliveira'\n",
+    "\n",
+    "# Também pode-se omitir o espaço para separar palavras\n",
     "nome.split()"
    ]
   },
@@ -103,7 +127,7 @@
     {
      "data": {
       "text/plain": [
-       "['M', 'ri', ' Oliveir', '']"
+       "['Ma', 'ia Olivei', 'a']"
       ]
      },
      "execution_count": 5,
@@ -112,9 +136,9 @@
     }
    ],
    "source": [
-    "# Separar as palavras em um string pela letra 'a'\n",
+    "# Separar as palavras em um string pela letra 'r'\n",
     "nome = 'Maria Oliveira'\n",
-    "nome.split('a')"
+    "nome.split('r')"
    ]
   },
   {
@@ -190,6 +214,13 @@
     "cidades = ['Recife', 'Manaus', 'Salvador']\n",
     "del cidades[2]\n",
     "print(cidades)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Funções auxiliares"
    ]
   },
   {
@@ -369,9 +400,9 @@
     "        \n",
     "> IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
     "\n",
-    "> VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
+    "> VENDEDOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF);\n",
     "\n",
-    "> COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
+    "> COMPRADOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF).\n",
     "\n",
     "> As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
     "        \n",
@@ -388,9 +419,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Referências</h2>\n",
+    "## Referências\n",
     "\n",
-    "#### https://github.com/dsacademybr/PythonFundamentos"
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-04-Listas.ipynb"
    ]
   },
   {
