--- a/Aulas/5 - Estruturas de repetição (Respostas).ipynb
+++ b/Aulas/5 - Estruturas de repetição (Respostas).ipynb
@@ -10,6 +10,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Escreva um programa para transformar todas as letras de todas as palavras de uma lista em letras maiúsculas. Imprima o resultado no console. Por exemplo:\n",
+    "\n",
+    "```python\n",
+    "# Entrada:\n",
+    "['João da Silva', 'São Paulo']\n",
+    "\n",
+    "# Saída\n",
+    "['JOÃO DA SILVA', 'SÃO PAULO']\n",
+    "\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['JOÃO DA SILVA', 'SÃO PAULO']\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = []\n",
+    "lista = ['João da Silva', 'São Paulo']\n",
+    "for palavra in lista:\n",
+    "    resultado.append(palavra.upper())\n",
+    "print(resultado)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Escreva um programa que recebe uma lista de pessoas (seus dados serão recebidos em um formato de lista, que consistem de nome, cidade na qual a pessoa reside e profissão), e retorna uma lista com o nome de todos os advogados.\n",
+    "\n",
+    "```python\n",
+    "# Entrada:\n",
+    "[['João', 'São Paulo', 'advogado'], ['Maria', 'Recife', 'dentista'], ['Alice', 'Curitiba', 'advogado']]\n",
+    "\n",
+    "# Saída\n",
+    "['João', 'Alice']\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['João', 'Alice']\n"
+     ]
+    }
+   ],
+   "source": [
+    "resultado = []\n",
+    "lista = [['João', 'São Paulo', 'advogado'], ['Maria', 'Recife', 'dentista'], ['Alice', 'Curitiba', 'advogado']]\n",
+    "for item in lista:\n",
+    "    if item[2] == 'advogado':\n",
+    "        resultado = resultado + [item[0]]\n",
+    "print(resultado)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
