--- a/Aulas/5 - Estruturas de repetição.ipynb
+++ b/Aulas/5 - Estruturas de repetição.ipynb
@@ -226,8 +226,35 @@
    "source": [
     "## Exercícios\n",
     "\n",
-    "1. Crie um programa que use o arquivo .csv e o arquivo .txt (template) para gerar vários contratos de venda."
+    "1. Escreva um programa para transformar todas as letras de todas as palavras de uma lista em letras maiúsculas. Imprima o resultado no console. Por exemplo:\n",
+    "\n",
+    "```python\n",
+    "# Entrada:\n",
+    "['João da Silva', 'São Paulo']\n",
+    "\n",
+    "# Saída\n",
+    "['JOÃO DA SILVA', 'SÃO PAULO']\n",
+    "\n",
+    "```\n",
+    "\n",
+    "2. Escreva um programa que recebe uma lista de pessoas (seus dados serão recebidos em um formato de lista, que consistem de nome, cidade na qual a pessoa reside e profissão), e retorna uma lista com o nome de todos os advogados.\n",
+    "\n",
+    "```python\n",
+    "# Entrada:\n",
+    "[['João', 'São Paulo', 'advogado'], ['Maria', 'Recife', 'dentista'], ['Alice', 'Curitiba', 'advogado']]\n",
+    "\n",
+    "# Saída\n",
+    "['João', 'Alice']\n",
+    "\n",
+    "```\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
