Update classes to use markdown

--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores (Respostas).ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores (Respostas).ipynb
@@ -259,6 +259,24 @@
     "# Imprime o valor da multa\n",
     "print('multa = ' + str(multa))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências\n",
+    "\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-01-Numeros.ipynb\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-02-Variaveis.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
