--- a/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
+++ b/Aulas/1 - Entrada, Saída e Tipos de dados, Operadores.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -726,36 +726,29 @@
    "source": [
     "## Exercícios\n",
     "\n",
-    "<ol>\n",
-    "    <li>Faça um programa que mostre a mensagem \"Alo mundo\" na tela.</li>\n",
-    "    <li>Faça um programa que peça as 4 notas bimestrais e mostre a média.</li>\n",
-    "    <li>Faça um programa que peça o raio de um círculo, calcule e mostre sua área. (pi = 3.14)</li>\n",
-    "    <li>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês.</li>\n",
-    "    <li>Faça um programa que peça a temperatura em graus Farenheit, transforme e mostre a temperatura em graus Celsius.\n",
-    "C = (5 * (F-32) / 9).</li>\n",
-    "    <li>Faça um programa que peça 2 números inteiros e um número real. Calcule e mostre:\n",
-    "        <ul>\n",
-    "            <li>o produto do dobro do primeiro com metade do segundo.</li>\n",
-    "            <li>a soma do triplo do primeiro com o terceiro.</li>\n",
-    "            <li>o terceiro elevado ao cubo.</li>\n",
-    "        </ul>\n",
-    "    </li>\n",
-    "    <li>Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
-    "        <ul>\n",
-    "            <li>salário bruto.</li>\n",
-    "            <li>quanto pagou ao INSS.</li>\n",
-    "            <li>quanto pagou ao sindicato.</li>\n",
-    "            <li>o salário líquido.</li>\n",
-    "        </ul>\n",
+    "1. Faça um programa que mostre a mensagem \"Alo mundo\" na tela.\n",
+    "\n",
+    "1. Faça um programa que peça as 4 notas bimestrais e mostre a média.\n",
+    "\n",
+    "1. Faça um programa que peça o raio de um círculo, calcule e mostre sua área. (pi = 3.14)\n",
+    "\n",
+    "1. Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês.\n",
+    "\n",
+    "1. Faça um programa que peça a temperatura em graus Farenheit, transforme e mostre a temperatura em graus Celsius. A fórmula para transformar de uma temperatura Celsius para Farenheit é: C = (5 * (F-32) / 9).\n",
+    "\n",
+    "1. Faça um programa que peça 2 números inteiros e um número real. Calcule e mostre:\n",
+    "    - o produto do dobro do primeiro com metade do segundo.\n",
+    "    - a soma do triplo do primeiro com o terceiro.\n",
+    "    - o terceiro elevado ao cubo.\n",
+    "\n",
+    "1. Faça um programa que pergunte quanto você ganha por hora e o número de horas trabalhadas no mês. Calcule e mostre o total do seu salário no referido mês, sabendo-se que são descontados 11% para o Imposto de Renda, 8% para o INSS e 5% para o sindicato, faça um programa que nos dê:\n",
+    "    - salário bruto.\n",
+    "    - quanto pagou ao INSS.\n",
+    "    - quanto pagou ao sindicato.\n",
+    "    - o salário líquido.\n",
     "    Obs.: Salário Bruto - Descontos = Salário Líquido.\n",
-    "    </li>\n",
-    "    <li>João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu \n",
-    "        trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do \n",
-    "        estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você \n",
-    "        faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a \n",
-    "        quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os \n",
-    "        dados do programa com as mensagens adequadas.</li>\n",
-    "</ol>"
+    "\n",
+    "1. João Papo-de-Pescador comprou um microcomputador para controlar o rendimento diário de seu trabalho. Toda vez que ele traz um peso de peixes maior que o estabelecido pelo regulamento de pesca do estado de São Paulo (50 quilos) deve pagar uma multa de R$ 4,00 por quilo excedente. João precisa que você faça um programa que leia a variável peso (peso de peixes) e calcule o excesso. Gravar na variável excesso a quantidade de quilos além do limite e na variável multa o valor da multa que João deverá pagar. Imprima os dados do programa com as mensagens adequadas."
    ]
   },
   {
