--- a/Aulas/2 - Strings (Respostas).ipynb
+++ b/Aulas/2 - Strings (Respostas).ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Respostas dos exercícios</h3>"
+    "### Respostas dos exercícios"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Strings</h2>"
+    "## Strings"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Escreva um programa que retorna o número de dígitos de um inteiro.</p>"
+    "Escreva um programa que retorna o número de dígitos de um inteiro."
    ]
   },
   {
@@ -99,6 +99,15 @@
     "dia = input('Digite o dia: ')\n",
     "\n",
     "print(frase.format(quantia, dia))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências\n",
+    "\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
   },
   {
