--- a/Aulas/2 - Strings.ipynb
+++ b/Aulas/2 - Strings.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Strings</h2>"
+    "## Strings"
    ]
   },
   {
@@ -296,27 +296,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Exercícios</h3>"
+    "### Exercícios\n",
+    "\n",
+    "1. Escreva um programa que retorna o número de dígitos de um inteiro.\n",
+    "\n",
+    "1. Escreva um programa que recebe o nome completo e retorna ele em minúsculo\n",
+    "\n",
+    "1. Escreva um programa que recebe uma quantia e um o número do dia, e preencha a frase abaixo, usando a função format:\n",
+    "    - \"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ (xxx) (Valor expresso), à vista, no dia (xxx).\"\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ol>\n",
-    "    <li>Escreva um programa que retorna o número de dígitos de um inteiro.</li>\n",
-    "    <li>Escreva um programa que recebe o nome completo e retorna ele em minúsculo</li>\n",
-    "    <li>Escreva um programa que recebe uma quantia e um o número do dia, e preencha a frase abaixo, usando a função format:\n",
-    "    <p>\"Por força deste instrumento, o COMPRADOR pagará ao VENDEDOR a quantia de R$ (xxx) (Valor expresso), à vista, no dia (xxx).\"</p>\n",
-    "    </li>\n",
-    "<ol>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Referências</h2>\n",
+    "## Referências\n",
     "\n",
     "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
