--- a/Aulas/3 - Condicionais (Respostas).ipynb
+++ b/Aulas/3 - Condicionais (Respostas).ipynb
@@ -4,21 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Respostas dos exercícios</h3>"
+    "### Respostas dos exercícios"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Condicionais</h2>"
+    "## Condicionais"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça dois números e imprima o maior deles.</p>"
+    "Faça um programa que peça dois números e imprima o maior deles."
    ]
   },
   {
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que peça um valor e mostre na tela se o valor é positivo ou negativo.</p>"
+    "Faça um programa que peça um valor e mostre na tela se o valor é positivo ou negativo."
    ]
   },
   {
@@ -79,7 +79,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que verifique se uma letra digitada é \"F\" ou \"M\". Conforme a letra escrever: F - Feminino, M - Masculino, Sexo Inválido.</p>"
+    "Faça um programa que verifique se uma letra digitada é \"F\" ou \"M\". Conforme a letra escrever: F - Feminino, M - Masculino, Sexo Inválido."
    ]
   },
   {
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que verifique se uma letra digitada é vogal ou consoante.</p>"
+    "Faça um programa que verifique se uma letra digitada é vogal ou consoante."
    ]
   },
   {
@@ -132,13 +132,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que receba uma idade e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
-    "    <ul>\n",
-    "        <li>A mensagem \"absolutamente incapaz\", se a idade for menor que 16;</li>\n",
-    "        <li>A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;</li>\n",
-    "        <li>A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.</li>\n",
-    "    </ul>\n",
-    "</p>"
+    "Faça um programa que receba uma idade e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
+    "   - A mensagem \"absolutamente incapaz\", se a idade for menor que 16;\n",
+    "   - A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;\n",
+    "   - A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18."
    ]
   },
   {
@@ -161,14 +158,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<p>Faça um programa que receba uma idade e o estado civil e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
-    "    <ul>\n",
-    "        <li>A mensagem \"plenamente capaz\", se o estado civil for \"casado\";</li>\n",
-    "        <li>A mensagem \"absolutamente incapaz\", se a idade for menor que 16;</li>\n",
-    "        <li>A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;</li>\n",
-    "        <li>A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.</li>\n",
-    "    </ul>\n",
-    "</p>"
+    "Faça um programa que receba uma idade e o estado civil e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
+    "   - A mensagem \"plenamente capaz\", se o estado civil for \"casado\";\n",
+    "   - A mensagem \"absolutamente incapaz\", se a idade for menor que 16;\n",
+    "   - A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;\n",
+    "   - A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18."
    ]
   },
   {
@@ -198,6 +192,15 @@
     "    print('relativamente incapaz')\n",
     "else:\n",
     "    print('plenamente capaz')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências\n",
+    "\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
   },
   {
