--- a/Aulas/3 - Condicionais.ipynb
+++ b/Aulas/3 - Condicionais.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Condicionais</h2>"
+    "## Condicionais"
    ]
   },
   {
@@ -165,41 +165,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h3>Exercícios</h3>"
+    "### Exercícios\n",
+    "1. Faça um programa que peça dois números e imprima o maior deles.\n",
+    "\n",
+    "1. Faça um programa que peça um valor e mostre na tela se o valor é positivo ou negativo.\n",
+    "\n",
+    "1. Faça um programa que verifique se uma letra digitada é \"F\" ou \"M\". Conforme a letra escrever: F - Feminino, M - Masculino, Sexo Inválido.\n",
+    "\n",
+    "1. Faça um programa que verifique se uma letra digitada é vogal ou consoante.\n",
+    "\n",
+    "1. Faça um programa que receba uma idade e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
+    "    - A mensagem \"absolutamente incapaz\", se a idade for menor que 16;\n",
+    "    - A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;\n",
+    "    - A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.\n",
+    "\n",
+    "1. Faça um programa que receba uma idade e o estado civil e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
+    "    - A mensagem \"plenamente capaz\", se o estado civil for \"casado\";\n",
+    "    - A mensagem \"absolutamente incapaz\", se a idade for menor que 16;\n",
+    "    - A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;\n",
+    "    - A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.\n",
+    "        "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<ol>\n",
-    "    <li>Faça um programa que peça dois números e imprima o maior deles.</li>\n",
-    "    <li>Faça um programa que peça um valor e mostre na tela se o valor é positivo ou negativo.</li>\n",
-    "    <li>Faça um programa que verifique se uma letra digitada é \"F\" ou \"M\". Conforme a letra escrever: F - Feminino, M - Masculino, Sexo Inválido.</li>\n",
-    "    <li>Faça um programa que verifique se uma letra digitada é vogal ou consoante.</li>\n",
-    "    <li>Faça um programa que receba uma idade e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
-    "        <ul>\n",
-    "            <li>A mensagem \"absolutamente incapaz\", se a idade for menor que 16;</li>\n",
-    "            <li>A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;</li>\n",
-    "            <li>A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.</li>\n",
-    "        </ul>\n",
-    "    </li>\n",
-    "    <li>Faça um programa que receba uma idade e o estado civil e responda se a pessoa é \"absolutamente incapaz\", \"relativamente incapaz\" e \"plenamente capaz\". O programa deve apresentar:\n",
-    "        <ul>\n",
-    "            <li>A mensagem \"plenamente capaz\", se o estado civil for \"casado\";</li>\n",
-    "            <li>A mensagem \"absolutamente incapaz\", se a idade for menor que 16;</li>\n",
-    "            <li>A mensagem \"relativamente incapaz\", se a idade for maior que 16 e menor que 18;</li>\n",
-    "            <li>A mensagem \"plenamente capaz\", se a idade for maior ou igual a 18.</li>\n",
-    "        </ul>\n",
-    "    </li>\n",
-    "</ol>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<h2>Referências</h2>\n",
+    "## Referências\n",
     "\n",
     "#### https://github.com/dsacademybr/PythonFundamentos"
    ]
