--- a/Aulas/4 - Listas (Respostas).ipynb
+++ b/Aulas/4 - Listas (Respostas).ipynb
@@ -13,15 +13,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:\n",
-    "        \n",
-    "> IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "Considere o seguinte trecho de código em Python, que atribui à variável ```template```, o seguinte documento:\n",
     "\n",
-    "> VENDEDOR: (Nome do Vendedor), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx);\n",
-    "\n",
-    "> COMPRADOR: (Nome do Comprador), (Nacionalidade), (Estado Civil), C.P.F. nº (xxx).\n",
-    "\n",
-    "> As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+    "```python\n",
+    "template = '''\n",
+    "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "VENDEDOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF);\n",
+    "COMPRADOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF).\n",
+    "As partes acima identificadas têm, entre si, justo e acertado o presente \n",
+    "Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, \n",
+    "que se regerá pelas cláusulas seguintes e \n",
+    "pelas condições descritas no presente.\n",
+    "'''\n",
+    "```\n",
     "        \n",
     "Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas mesmas informações (nome, nacionalidade, estado civil e cpf) do comprador. \n",
     "\n",
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -43,29 +47,31 @@
       "Digite nacionalidade do vendedor: brasileiro\n",
       "Digite estado civil do vendedor: solteiro\n",
       "Digite CPF do vendedor: 1234\n",
-      "Digite nome do comprador: Felipe\n",
-      "Digite nacionalidade do comprador: brasileiro\n",
-      "Digite estado civil do comprador: casado\n",
+      "Digite nome do comprador: Erica\n",
+      "Digite nacionalidade do comprador: brasileira\n",
+      "Digite estado civil do comprador: casada\n",
       "Digite CPF do comprador: 1235\n",
       "\n",
       "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
-      "\n",
       "VENDEDOR: (RENATO), (BRASILEIRO), (solteiro), C.P.F. nº (1234);\n",
-      "COMPRADOR: (FELIPE), (BRASILEIRO), (casado), C.P.F. nº (1235).\n",
-      "\n",
-      "As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+      "COMPRADOR: (ERICA), (BRASILEIRA), (casada), C.P.F. nº (1235).\n",
+      "As partes acima identificadas têm, entre si, justo e acertado o presente \n",
+      "Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, \n",
+      "que se regerá pelas cláusulas seguintes e \n",
+      "pelas condições descritas no presente.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "documento = '''\n",
+    "template = '''\n",
     "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
-    "\n",
     "VENDEDOR: ({}), ({}), ({}), C.P.F. nº ({});\n",
     "COMPRADOR: ({}), ({}), ({}), C.P.F. nº ({}).\n",
-    "\n",
-    "As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
+    "As partes acima identificadas têm, entre si, justo e acertado o presente \n",
+    "Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, \n",
+    "que se regerá pelas cláusulas seguintes e \n",
+    "pelas condições descritas no presente.\n",
     "'''\n",
     "\n",
     "nome_vendedor = input('Digite nome do vendedor: ')\n",
@@ -82,7 +88,17 @@
     "estado_civil_comprador = input('Digite estado civil do comprador: ')\n",
     "cpf_comprador = input('Digite CPF do comprador: ')\n",
     "\n",
-    "print(documento.format(nome_vendedor, nacionalidade_vendedor, estado_civil_vendedor, cpf_vendedor, nome_comprador, nacionalidade_comprador, estado_civil_comprador, cpf_comprador))"
+    "print(template.format(nome_vendedor, nacionalidade_vendedor, estado_civil_vendedor, cpf_vendedor, nome_comprador, nacionalidade_comprador, estado_civil_comprador, cpf_comprador))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências\n",
+    "\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap02/Notebooks/DSA-Python-Cap02-04-Listas.ipynb"
    ]
   },
   {
