--- a/Aulas/4 - Listas.ipynb
+++ b/Aulas/4 - Listas.ipynb
@@ -396,16 +396,20 @@
    "source": [
     "### Exercícios\n",
     "\n",
-    "Atribua a uma variável em seu programa um string entre aspas triplas contendo esse documento:\n",
-    "        \n",
-    "> IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "Considere o seguinte trecho de código em Python, que atribui à variável ```template```, o seguinte documento:\n",
     "\n",
-    "> VENDEDOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF);\n",
-    "\n",
-    "> COMPRADOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF).\n",
-    "\n",
-    "> As partes acima identificadas têm, entre si, justo e acertado o presente Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, que se regerá pelas cláusulas seguintes e pelas condições descritas no presente.\n",
-    "        \n",
+    "```python\n",
+    "template = '''\n",
+    "IDENTIFICAÇÃO DAS PARTES CONTRATANTES\n",
+    "VENDEDOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF);\n",
+    "COMPRADOR: (Nome), (Nacionalidade), (Estado Civil), C.P.F. nº (CPF).\n",
+    "As partes acima identificadas têm, entre si, justo e acertado o presente \n",
+    "Contrato de Compra e Venda de Bem Imóvel à Vista entre Pessoas Físicas, \n",
+    "que se regerá pelas cláusulas seguintes e \n",
+    "pelas condições descritas no presente.\n",
+    "'''\n",
+    "```\n",
+    "    \n",
     "Escreva um programa recebe o nome do vendedor, nacionalidade, estado civil e cpf; assim como todas essas mesmas informações (nome, nacionalidade, estado civil e cpf) do comprador. \n",
     "\n",
     "Inicialmente, o programa deve imprimir as informações recebidas em formato de lista, tanto para o vendedor quanto para o comprador. Os nomes e as nacionalidades (tanto do vendedor quanto do comprador) devem ser apresentadas em maiúsculo. \n",
