--- a/Aulas/5 - Estruturas de repetição (Respostas).ipynb
+++ b/Aulas/5 - Estruturas de repetição (Respostas).ipynb
@@ -85,6 +85,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Referências\n",
+    "\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap03/Notebooks/DSA-Python-Cap03-02-For.ipynb\n",
+    "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap03/Notebooks/DSA-Python-Cap03-03-While.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
