--- a/Aulas/5 - Estruturas de repetição.ipynb
+++ b/Aulas/5 - Estruturas de repetição.ipynb
@@ -240,8 +240,12 @@
     "2. Escreva um programa que recebe uma lista de pessoas (seus dados serão recebidos em um formato de lista, que consistem de nome, cidade na qual a pessoa reside e profissão), e retorna uma lista com o nome de todos os advogados.\n",
     "\n",
     "```python\n",
+    "dados_joao = ['João', 'São Paulo', 'advogado']\n",
+    "dados_maria = ['Maria', 'Recife', 'dentista']\n",
+    "dados_alice = ['Alice', 'Curitiba', 'advogado']\n",
+    "\n",
     "# Entrada:\n",
-    "[['João', 'São Paulo', 'advogado'], ['Maria', 'Recife', 'dentista'], ['Alice', 'Curitiba', 'advogado']]\n",
+    "[dados_joao, dados_maria, dados_alice]\n",
     "\n",
     "# Saída\n",
     "['João', 'Alice']\n",
@@ -250,17 +254,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Referências</h2>\n",
+    "## Referências\n",
     "\n",
     "#### https://github.com/dsacademybr/PythonFundamentos\n",
     "#### https://github.com/dsacademybr/PythonFundamentos/blob/master/Cap03/Notebooks/DSA-Python-Cap03-02-For.ipynb\n",
